Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Notification__c/Training_Notification__c.object-meta.xml
<CustomObject>
    <label>Training Notification</label>
    <nameField>
        <label>Training Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>