Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Notification__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Notification content</description>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>