Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Notification__c/fields/Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Date__c</fullName>
    <description>When to notify</description>
    <label>Notification Date</label>
    <type>DateTime</type>
</CustomField>