Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Notification__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>