Interns-HUB/Training Compliance & Certification Tracking System Project/force-app/main/default/objects/Training_Notification__c/fields/Training_Module__c.field-meta.xml
<CustomField>
    <fullName>Training_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Module</label>
    <referenceTo>Training_Module__c</referenceTo>
    <relationshipLabel>Training Notifications</relationshipLabel>
    <relationshipName>Training_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>